# leafwing-input-manager

./: .gitattributes  .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  RELEASE-CHECKLIST.md  RELEASES.md  book.toml  clippy.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md  code-quality.md  documentation.md  enhancement.md  performance.md  prototype.md  usability.md
.github/PULL_REQUEST_TEMPLATE/: content.md  design.md  pr.md  rfc.md
.github/linters/: .markdown-link.yml  .markdown-lint.yml  markdown-link-check.json
.github/workflows/: ci.yml
assets/: asset-licenses.csv
benches/: action_state.rs  entity_spawning.rs  input_map.rs
docs/src/: SUMMARY.md  genre-analysis.md  overview.md
docs/src/rfc/: template.md
examples/: README.md  action_event_stream.rs  action_state_resource.rs  analog_stick.rs  arpg.rs  arpg_indirection.rs  axis_inputs.rs  binding_menu.rs  clash_handling.rs  consuming_actions.rs  custom_input.rs  default_controls.rs  hello_world.rs  input_map_isolation.rs  input_processing.rs  logical_key_bindings.rs  minimal.rs  mouse_motion.rs  mouse_position.rs  mouse_wheel.rs  multiplayer.rs  physical_key_bindings.rs  press_duration.rs  rebind.rs  register_gamepads.rs  send_actions_over_network.rs  single_player.rs  triggers.rs  twin_stick_controller.rs  ui-driven-actions.rs  ui_driven_actions.rs  virtual_dpad.rs
examples/game/: common_ui.rs  gameplay.rs  input_binding_menu.rs  main.rs
macros/: Cargo.toml
macros/src/: actionlike.rs  lib.rs  path.rs  typetag.rs  utils.rs
src/: __private_macros.rs  action_diff.rs  action_driver.rs  action_state.rs  arrayset.rs  axislike.rs  axislike_user_input.rs  buttonlike.rs  buttonlike_user_input.rs  charges.rs  clashing_inputs.rs  common_conditions.rs  conflicting_inputs.rs  cooldown.rs  display_impl.rs  dynamic_action.rs  errors.rs  gamepad.rs  geometric_primitives.rs  input.rs  input_chord.rs  input_like.rs  input_map.rs  input_mocking.rs  input_resource.rs  input_streams.rs  key_locations.rs  lib.rs  macros.rs  main.rs  movement.rs  orientation.rs  plugin.rs  press_scheduler.rs  raw_inputs.rs  reflect.rs  smallset.rs  systems.rs  timing.rs  typetag.rs  (+2 more)
src/action_state/: action_data.rs  mod.rs
src/input_like/: chords.rs  dual_axis.rs  gamepad_axis.rs  gamepad_axis_type.rs  gamepad_button.rs  gamepad_button_type.rs  keycode.rs  mod.rs  mouse_button.rs  mouse_motion.rs  mouse_motion_axis.rs  mouse_wheel.rs  scancode.rs  virtual_axis.rs  virtual_dpad.rs
src/input_processing/: dual_axis.rs  mod.rs  pipeline.rs  single_axis.rs
src/input_processing/dual_axis/: bounds.rs  circle.rs  custom.rs  deadzone.rs  extension.rs  mod.rs  modifier.rs  pipeline.rs  range.rs
src/input_processing/single_axis/: custom.rs  mod.rs  modifier.rs  pipeline.rs  range.rs
src/input_settings/: axislike_processors.rs  axislike_settings.rs  common_processors.rs  deadzone_processors.rs  deadzones.rs  dual_axis_settings.rs  mod.rs  single_axis_settings.rs
src/scan_codes/: linux.rs  mac_os.rs  mod.rs  set_1.rs  wasm.rs  windows.rs
src/user_input/: chord.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs  raw_inputs.rs  testing_utils.rs  trait_reflection.rs  trait_serde.rs  updating.rs  virtual_axial.rs
src/user_inputs/: axislike.rs  axislike_settings.rs  chord.rs  chord_inputs.rs  gamepad.rs  gamepad_inputs.rs  keyboard.rs  keyboard_inputs.rs  mod.rs  mouse.rs  mouse_inputs.rs
tests/: action_diffs.rs  actionlike_derive.rs  axislike_axis_data.rs  buttonlike.rs  clashes.rs  cooldowns.rs  fixed_update.rs  gamepad_axis.rs  input_map_isolation.rs  integration.rs  keyboard_axis.rs  mouse_motion.rs  mouse_wheel.rs  multiple_gamepads.rs  triggerlike.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
