[package]
name = "leafwing-input-manager"
description = "A powerfully direct stateful input manager for the Bevy game engine."
version = "0.14.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing-input-manager"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci", "macros"]

[features]
default = ['asset', 'ui', 'bevy/bevy_gilrs']

# Allow using the `InputMap` as `bevy::asset::Asset`.
asset = ['bevy/bevy_asset']

# Add support for 'bevy::ui' integration:
# - Allow 'bevy::ui' to take priority over actions when processing inputs.
# - Automatic process clicks on 'bevy::ui' buttons that attached `ActionStateDriver` to drive corresponding actions.
# - Allow using `MockUIInteraction` for 'bevy::ui' input mocking.
ui = ['bevy/bevy_ui']

# Disable the priority of 'bevy::ui' when processing inputs.
no_ui_priority = []

# Add support for 'egui' integration:
# - Allow 'egui' to take priority over actions when processing inputs.
egui = ['dep:bevy_egui']

[dependencies]
leafwing_input_manager_macros = { path = "macros", version = "0.13" }
bevy = { version = "0.13", default-features = false, features = [
  "serialize",
] }
bevy_egui = { version = "0.27", optional = true }

derive_more = { version = "0.99", default-features = false, features = [
  "display",
  "error",
] }
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_flexitos = "0.2"
dyn-clone = "1.0"
dyn-eq = "0.1"
dyn-hash = "0.2"
once_cell = "1.19"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_asset",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_render",
  "bevy_core_pipeline",
  "x11",
] }
bevy_egui = "0.27"
serde_test = "1.0"
criterion = "0.5"

[[bench]]
name = "action_state"
harness = false

[[bench]]
name = "input_map"
harness = false

[lib]
name = "leafwing_input_manager"
path = "src/lib.rs"
