[package]
name = "leafwing_input_manager_macros"
description = "Macros for the `leafwing-input-manager` crate"
version = "0.6.0"

license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing-input-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 [lib]
 proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.1"